<resources>
    <string name="app_name">AuditReport</string>
    <string name="systems_logo">Systems Logo</string>
    <string name="login">LogIn</string>
    <string name="todo">TODO</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="designationerror">Enter a valid designation</string>
    <string name="ncerror">Enter a number</string>
    <string name="emailerror">Enter a valid e-mail</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="_2018_systems_limited_privacy_policy">© 2018 Systems limited | Privacy Policy</string>
    <string name="designation">Designation</string>
    <string name="email">Email</string>
    <string name="number_of_nc">Number of NC:</string>
    <string name="general_information">General Information</string>
    <string name="next">Next</string>

    <!-- FOr spinners -->

    <string-array name="competency_spinner">
        <item>Digital Framework</item>
        <item>CRM</item>
    </string-array>


    <string-array name="location_spinner">
        <item>Lahore</item>
        <item>Karachi</item>
    </string-array>

    <string-array name="verified_spinner">
        <item>Yes</item>
        <item>No</item>
        <item>N/A</item>
    </string-array>

    <string-array name="nc_spinner">
        <item>Project Initiation</item>
        <item>Project Planning</item>
        <item>Project Monitoring</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auditer_home">AuditerHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_audit_settings">AuditSettings</string>


    <!-- For Charts -->

    <string name="pie_chart">Pie Chart</string>
    <string name="column_chart">Column Chart</string>
    <string name="line_chart">Line Chart</string>
    <string name="venn_diagram">Venn Diagram</string>
    <string name="heat_map_chart">Heat Map Chart</string>
    <string name="tag_cloud">Tag Cloud</string>
    <string name="waterfall_chart">Waterfall Chart</string>
    <string name="tree_map_chart">Tree Map Chart</string>
    <string name="circular_gauge">Circular Gauge</string>
    <string name="thermometer">Thermometer</string>
    <string name="linear_color_scale">Linear Color Scale</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="scatter_chart">Scatter Chart</string>
    <string name="resource_chart">Resource Chart</string>
    <string name="radar_chart">Radar Chart</string>
    <string name="polar_chart">Polar Chart</string>
    <string name="range_chart">Range Chart</string>
    <string name="vertical_chart">Vertical Chart</string>
    <string name="funnel_chart">Funnel Chart</string>
    <string name="pert_chart">Pert Chart</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="combined_chart">Combined Chart</string>
    <string name="bubble_chart">Bubble Chart</string>
    <string name="pareto_chart">Pareto Chart</string>
    <string name="pyramid_chart">Pyramid Chart</string>
    <string name="area_chart">Area Chart</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="box_chart">Box Chart</string>
    <string name="mosaic_chart">Mosaic Chart</string>
    <string name="mekko_chart">Mekko Chart</string>
    <string name="bar3d_chart">3D Bar Chart</string>
    <string name="column3d_chart">3D Column Chart</string>
    <string name="area3d_chart">3D Area Chart</string>
    <string name="hilo_chart">Hilo Chart</string>
    <string name="ohlc_chart">OHLC Chart</string>
    <string name="quadrant_chart">Quadrant Chart</string>
    <string name="bubble_map">Bubble Map</string>
    <string name="choropleth_map">Choropleth Map</string>
    <string name="point_map">Point Map</string>
    <string name="connector_map">Connector Map</string>
    <string name="sunburst_chart">Sunburst Chart</string>
    <string name="two_pies_one_column">Two pies one column</string>
    <string name="title_activity_admin_home">AdminHome</string>

</resources>
