<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f26224"
    tools:context=".Registration"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_gravity= "center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/systems"
        android:contentDescription="@string/systems_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.7dp"
        android:text="@string/registration"
        android:gravity="center"
        android:textColor="#030303"
        android:textSize="31.3sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/f_name"
            android:hint="First Name"
            android:inputType="textPersonName"
            android:textColor="#555555"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            tools:ignore="HardcodedText,UnusedAttribute" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/l_name"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:textColor="#555555"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/designation"
            android:hint="Designation"
            android:inputType="textPersonName"
            android:background="@drawable/shapeemail"
            android:textColor="#555555"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#555555"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/c_password"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textColor="#f26224"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            tools:ignore="HardcodedText,InconsistentLayout,UnusedAttribute" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/register"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:backgroundTint="#333333"
        tools:ignore="UnusedAttribute" />

</LinearLayout>