<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#f26224"

    android:layout_height="match_parent"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.7dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15.7dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20.7dp"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="444dp"
                android:background="@drawable/white_cueve_bg"
                android:contentDescription="@string/todo" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20.7dp">


                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="160dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/systems_logo"
                    android:src="@drawable/systems" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7.7dp"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#030303"
                    android:textSize="31.3sp"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutu_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo"
                    tools:ignore="ObsoleteLayoutParam">

                    <EditText
                        android:id="@+id/u_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="User Name"
                        android:inputType="textEmailAddress"
                        android:textColor="#555555"
                        android:textColorHint="#555555"
                        tools:ignore="Autofill,HardcodedText" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layoutu_name"
                    android:textColorHint="#555555"
                    app:passwordToggleEnabled="true"
                    tools:ignore="ObsoleteLayoutParam">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:textColor="#555555"
                        tools:ignore="HardcodedText"
                        android:maxLength="12"
                        tools:targetApi="o" />

                </android.support.design.widget.TextInputLayout>

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layoutpassword"
                    android:textSize="12sp"
                    android:textColor="#333333"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="14dp"
                    android:layout_marginLeft="62dp"
                    android:layout_marginRight="62dp"
                    android:layout_marginTop="18.7dp"
                    android:text="Login"
                    android:background="@drawable/blue_fill__rounded_color"
                    tools:ignore="HardcodedText,ObsoleteLayoutParam,UnusedAttribute" />

                <TextView
                    android:id="@+id/link_regist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="14dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#333333"
                    tools:ignore="HardcodedText,ObsoleteLayoutParam" />


            </LinearLayout>


        </FrameLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/_2018_systems_limited_privacy_policy"
            android:textColor="#333333"
            android:layout_marginLeft="34dp"
            android:textStyle="bold"/>

    </LinearLayout>


</RelativeLayout>