<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormPageOne">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_information"
            android:gravity="center"
            android:textColor="#333333"
            android:layout_marginTop="4sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="33sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp">

        <View
            android:layout_width="5.6dp"
            android:layout_height="432dp"
            android:background="@color/systemsorange"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/rectangle"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="6dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="Project: "
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/project_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@null"
                    android:freezesText="true"
                    android:maxLength="16"
                    android:gravity="left"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="15sp"
                    tools:ignore="Autofill,LabelFor,RtlHardcoded" />



             </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:orientation="horizontal"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="6dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#333333"
                android:text="Competency: "
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="14dp"
                tools:ignore="HardcodedText" />

            <Spinner
                android:id="@+id/compet_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="14dp"
                android:entries="@array/competency_spinner"
                />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="horizontal"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="6dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#333333"
                    android:text="Track: "
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="14dp"
                    tools:ignore="HardcodedText" />

                <Spinner
                    android:id="@+id/track_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="14dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="horizontal"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="6dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="Customer: "
                    tools:ignore="HardcodedText" />

                <EditText
                    android:id="@+id/customer_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:textSize="15sp"
                    android:maxLength="16"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:maxLines="1"
                    tools:ignore="Autofill,LabelFor,RtlHardcoded"
                    android:inputType="textPersonName"
                    android:layout_marginRight="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="horizontal"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="6dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="Location: "
                    tools:ignore="HardcodedText" />


                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="14dp"
                    android:entries="@array/location_spinner"
                    android:layout_marginStart="45dp">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="horizontal"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="6dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="6dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_nc"
                    android:layout_marginTop="12dp"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/number_of_nc_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="12dp"
                    android:background="@null"
                    android:textSize="15sp"
                    android:maxLength="2"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:maxLines="1"
                    tools:ignore="Autofill,LabelFor,RtlHardcoded"
                    android:inputType="number"
                    android:layout_marginRight="3dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="41dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16.7dp"
                android:background="@drawable/half_blue_roundshape"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/txt_Nxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    />

            </LinearLayout>
    </LinearLayout>



    </LinearLayout>


    </LinearLayout>

</RelativeLayout>